# gametime

./: .gitignore  README.md  TODO.md  docker-compose.test.yaml  docker-compose.yaml  gametime.code-workspace  package.json
fns/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  genqlient.yaml  go.mod  go.sum  main.go
fns/api_utils/: hasura_inbound.go  send_error.go  send_error_test.go
fns/auth/: authenticate.go  authenticate_test.go  router.go
fns/middleware/: verify_hasura_sent.go  verify_hasura_sent_test.go
fns/queries/: new_film.graphql  new_user.graphql
fns/routers/auth/: authenticate.go  authenticate_test.go  router.go
fns/routers/film/: router.go  upload_film.go  upload_film_test.go
fns/services/: hasura_client.go  jwt_client.go  object_storage_client.go
fns/src/: errors.rs  main.rs  webhook_secret_middleware.rs
fns/src/auth/: mod.rs
fns/src/aux/: errors.rs  mod.rs  webhook_secret_middleware.rs
fns/src/routers/auth/: authenticate.rs  mod.rs
fns/src/routers/auth/queries/: create_user.graphql
fns/src/services/: mod.rs
fns/src/services/hasura/: hasura_service.rs  mod.rs
fns/src/services/jwt/: claims.rs  mod.rs  sign_jwt.rs
fns/test_utils/: verify_webhook_error.go
fns/test_utils/mock_services/: mock_hasura_client.go  mock_jwt_client.go  mock_object_storage_client.go
fns/types/: error.go
hasura/: config.yaml
mobile/: .gitignore  analysis_options.yaml  build.yaml  pubspec.yaml
postgraphile/: .eslintrc.json  .gmrc  Dockerfile  README.md  package.json  tsconfig.json
scripts/: all.sh  flutter_build_runner.sh  go_build_runner.sh  (+2 more)
(+109 files in other folders)
