[package]
name = "fns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures-util = "0.3.21"
anyhow = "1.0.60"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11.11"
graphql_client = { version = "0.11.0", features = [ "reqwest" ] }
uuid = { version = "1.1.2", features = [ "serde" ] }
env_logger = "0.9.0"
hmac = "0.12.1"
sha2 = "0.10.2"
jwt = "0.16.0"
mockall = "0.11.2"
async-trait = "0.1.57"